@@ -1,3 +1,3 @@
 clear
 CLASSES="src"
-java -cp $CLASSES assignment_2.ChatServer 1099 chat
+java -Djava.security.manager -Djava.security.policy=chat.policy -cp $CLASSES assignment_2.ChatServer 1099 ChatServer
