@@ -1,4 +1,3 @@
 clear
 CLASSES="src"
-java -cp $CLASSES assignment_2.ChatClient 192.168.1.2 1099 chat
-pause
+java -Djava.security.manager -Djava.security.policy=chat.policy -cp $CLASSES assignment_2.ChatClient 192.168.1.2 1099 ChatServer
